# multi_tenant_auth

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  __init__.py  apps.py  cli.py  conf.py  config.py  constants.py  db.py  decorators.py  exceptions.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
api/: postman_collection.json  urls.py
examples/: basic_saas_project.py
management/commands/: check_auth_config.py  create_auth_admin.py  init_auth.py
migrations/: __init__.py  migrator.py
migrations/sql/: 001_create_schema.sql  002_create_users_table.sql  003_create_teams_table.sql  004_create_workspaces_table.sql  005_create_audit_table.sql
models/: __init__.py  audit.py  base.py  team.py  user.py  workspace.py
services/: __init__.py  auth_service.py  permission_service.py  team_service.py
tests/: README.md  __init__.py  settings.py  test_auth_service.py  test_authentication_scenarios.py  test_complete_crud.py  test_concurrency_and_performance.py  test_decorators.py  test_edge_cases.py  test_edge_cases_and_exceptions.py  test_integration_scenarios.py  test_models.py  test_performance_benchmarks.py  test_permission_service.py  test_permission_system.py  urls.py
