[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-tenant-auth"
version = "1.0.0"
authors = [
    {name = "Jindequan", email = "jindequan@example.com"},
]
description = "极简多租户认证权限管理库 - 开源免费，禁止商业化"
readme = "README.md"
license = {text = "MIT License with Commercial Restrictions"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["django", "multi-tenant", "authentication", "authorization", "saas", "workspace", "team", "rbac"]
dependencies = [
    "Django>=3.2,<5.1",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.2.0",
    "django-cors-headers>=4.0.0",
    "python-decouple>=3.8",
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "celery>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "factory-boy>=3.2.0",
    "faker>=18.6.0",
]
docs = [
    "Sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinxcontrib-django>=2.0",
]
monitoring = [
    "sentry-sdk>=1.25.0",
    "prometheus-client>=0.16.0",
]
cache = [
    "django-redis>=5.2.0",
    "django-cacheops>=7.0.0",
]
aws = [
    "boto3>=1.26.0",
    "django-storages>=1.13.0",
]
all = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "factory-boy>=3.2.0",
    "faker>=18.6.0",
    "Sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinxcontrib-django>=2.0",
    "sentry-sdk>=1.25.0",
    "prometheus-client>=0.16.0",
    "django-redis>=5.2.0",
    "django-cacheops>=7.0.0",
    "boto3>=1.26.0",
    "django-storages>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/your-org/multi-tenant-auth"
Documentation = "https://multi-tenant-auth.readthedocs.io/"
Repository = "https://github.com/your-org/multi-tenant-auth.git"
"Bug Reports" = "https://github.com/your-org/multi-tenant-auth/issues"
Changelog = "https://github.com/your-org/multi-tenant-auth/blob/main/CHANGELOG.md"

[project.scripts]
multi-tenant-auth = "multi_tenant_auth.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
multi_tenant_auth = [
    "templates/**/*",
    "static/**/*",
    "locale/**/*",
    "fixtures/**/*",
    "management/**/*",
    "migrations/**/*",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=multi_tenant_auth",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "auth: marks tests as authentication related",
    "permissions: marks tests as permission related",
]

[tool.coverage.run]
source = ["multi_tenant_auth"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]